Fix some size scaling issues at >1900px widths. Center align form fields.

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,8 @@ form {
     border-radius: 1vh 1vh 0 0;
     background-color: var(--background290);
     text-shadow: 1px 1px 3px var(--shadow1);
+    align-items: center;
+    text-align: center;
 }
 
 #info {
@@ -153,6 +155,8 @@ form {
 #info > img {
     width: 90%;
     height: 90%;
+    max-height: 480px;
+    max-width: 600px;
     border-radius: calc(1px + 1vh);
     box-shadow: 0px 1px 2px var(--foreground1);
 }
@@ -216,7 +220,7 @@ p > span:last-child {
 footer {
     text-align: center;
     margin-top: calc(10px + 1vw + 1vh);
-    font-size: calc(1px + 0.5vw + 0.5vh);
+    font-size: calc(4px + 0.5vw + 0.5vh);
     color: var(--foreground2)90;
     text-shadow: 0px 0px 1px var(--shadow1);
 }
@@ -278,7 +282,7 @@ footer {
         width: 640px;
         justify-self: center;
         margin: auto;
-        padding: 17px 34px 34px;
+        padding: 17px 34px;
     }
     #form {
         padding-bottom: -20px;
@@ -294,13 +298,11 @@ footer {
     #next {
         padding: 5px 0px;
         width: 119px;
-        font-size: 18px;
+        height: 50px;
+        font-size: 22px;
     }
     #large-menu {
         font-size: 33px;
-    }
-    footer {
-        font-size: 11px;
     }
 }
 
@@ -323,6 +325,6 @@ footer {
     }
     input {
         width: 40%;
-        height: 7%;
+        height: 30px;
     }
 }
